Prevent single-word line-breaks in paragraphs

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -102,6 +102,7 @@ a {
 p {
   margin-top: 0;
   margin-bottom: 1em;
+  text-wrap: pretty;
 }
 
 figcaption {
